syntax = "proto3";

package message;

service Connection {
    rpc JoinGroup(JoinRequest) returns (JoinReply) {}
    rpc ExitGroup(ExitRequest) returns (ExitReply) {}
    rpc HeartBeat(HeartBeatRequest) returns (HeartBeatReply) {}
}

message JoinRequest {
    string ipAddr = 1; //tell master the ip of this node
    int32 port = 2;    //tell master the port of the node
}

message JoinReply {
    bool reply = 1;
}

message ExitRequest {
    string ipAddr = 1;
}

message ExitReply {
    bool reply = 1;
}

message HeartBeatRequest {
    int64 time = 1;
}

message HeartBeatReply {
    bool status = 1;
}

